refactor(auth): change cookie to resp header
